@@ -14,5 +14,5 @@ public interface CommandsInterface {
     public void enterSearchMode();
     public void executeSearch();
     public void exitSearchMode();
-//    public void highlightSearchResult(ArrayList matchedIndexes);
+    public void setHighlightSearchResults(boolean highlightSearchResults);
 }
