@@ -2,8 +2,8 @@ This list has elements that are not related to a specific part of the source cod
 
 Now
 TODO - Reimplement search
-     - Handle when backspace deletes every search item
      - Jump to prev/next search result
+     - set :noh / :hl to enable/disable search highlighting
      - Clean up highlight HTML Code in Cell Renderer
         - Use color values from Properties file
 TODO - Remap cursor navigation
